15749
Given the the following files:

`p/J.java`

{code}
package p;
public class J {
    protected void m() { return; }
}
{code}


`p/S.scala`
{code}
package p
class S extends J {
  override protected def m { }
}
{code}

Compiling them together with `scalac` gives the correct error message:

{code}
lamppc11:bug1 luc$$ ../../target/pack/bin/scalac p/J.java p/S.scala
p/S.scala:3: error: overriding method m in class J of type ()Unit;
 method m has weaker access privileges; it should be at least protected[p]
  override protected def m { }
                         ^
one error found
{code}

However, when compiling first the Java file, then the Scala file there's no error message:

{code}
lamppc11:bug1 luc$$ javac p/J.java 
lamppc11:bug1 luc$$ ../../target/pack/bin/scalac p/S.scala 
lamppc11:bug1 luc$$
{code}
